<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/more"
        android:textColor="#5cb34b"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#CFCFCF" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#CFCFCF" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text"
        android:background="#ffffff" >

        <ImageView
            android:id="@+id/account_img2"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/yewuyy" />

        <TextView
            android:id="@+id/account_blance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/account_img2"
            android:text="@string/huiyuan"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/account_img4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/ck30" />

        <TextView
            android:id="@+id/moneyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@id/account_img4" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:background="#ffffff" >

        <ImageView
            android:id="@+id/account_img2"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/yonghubz" />

        <TextView
            android:id="@+id/account_blance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/account_img2"
            android:text="@string/bangzhu"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/account_img4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/ck30" />

        <TextView
            android:id="@+id/moneyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@id/account_img4" />
    </RelativeLayout>

    <TextView
        android:id="@+id/stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkversion"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="退出"
        android:textColor="#5cb34b"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/checkversion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="检测版本"
        android:textColor="#5cb34b"
        android:textSize="20sp" />

</RelativeLayout>